server/packages/sandbox-agent/tests/http/snapshots/http_sse_snapshots__approval_flow_snapshots@question_reply_missing_codex.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
assertion_line: 1078
expression: "json!({ \"status\": status.as_u16(), \"payload\": payload, })"
---
payload:
  detail: "invalid request: unknown question id: missing-question"
  status: 400
  title: Invalid Request
  type: "urn:sandbox-agent:error:invalid_request"
status: 400
