server/packages/sandbox-agent/tests/http/snapshots/http_sse_snapshots__auth_snapshots@auth_missing_token_global.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
assertion_line: 776
expression: "json!({ \"status\": status.as_u16(), \"payload\": payload, })"
---
payload:
  detail: token invalid
  details:
    message: missing or invalid token
  status: 401
  title: Token Invalid
  type: "urn:sandbox-agent:error:token_invalid"
status: 401
