server/packages/sandbox-agent/tests/http/snapshots/http_sse_snapshots__cors_snapshots@cors_actual_global.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
assertion_line: 842
expression: "json!({\n    \"cors\": snapshot_cors(status, &headers), \"payload\":\n    normalize_health(&payload),\n})"
---
cors:
  access-control-allow-credentials: "true"
  access-control-allow-origin: "http://example.com"
  status: 200
  vary: "origin, access-control-request-method, access-control-request-headers"
payload:
  status: ok
