server/packages/sandbox-agent/tests/http/snapshots/http_sse_snapshots__run_http_events_snapshot@http_events_mock.snap
---
source: server/packages/sandbox-agent/tests/http/http_sse_snapshots.rs
assertion_line: 804
expression: normalized
---
- metadata: true
  seq: 1
  session: started
  type: session.started
- metadata: true
  seq: 2
  session: started
  type: session.started
- item:
    content_types:
      - text
    kind: message
    role: assistant
    status: in_progress
  seq: 3
  type: item.started
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 4
  type: item.delta
- item:
    content_types:
      - text
    kind: message
    role: assistant
    status: completed
  seq: 5
  type: item.completed
