server/packages/sandbox-agent/tests/http/snapshots/http_sse_snapshots__run_sse_events_snapshot@sse_events_codex.snap
---
source: server/packages/sandbox-agent/tests/http/http_sse_snapshots.rs
assertion_line: 848
expression: normalized
---
- metadata: true
  seq: 1
  session: started
  source: daemon
  synthetic: true
  type: session.started
- metadata: true
  seq: 2
  session: started
  source: agent
  synthetic: false
  type: session.started
- item:
    content_types:
      - status
    kind: status
    role: system
    status: completed
  seq: 3
  source: agent
  synthetic: false
  type: item.completed
- item:
    content_types:
      - text
    kind: message
    role: user
    status: in_progress
  seq: 4
  source: agent
  synthetic: false
  type: item.started
- delta:
    delta: "<redacted>"
    item_id: "<redacted>"
    native_item_id: "<redacted>"
  seq: 5
  source: daemon
  synthetic: true
  type: item.delta
- item:
    content_types:
      - text
    kind: message
    role: user
    status: completed
  seq: 6
  source: agent
  synthetic: false
  type: item.completed
- item:
    content_types: []
    kind: message
    role: assistant
    status: in_progress
  seq: 7
  source: agent
  synthetic: false
  type: item.started
- item:
    content_types: []
    kind: message
    role: assistant
    status: completed
  seq: 8
  source: agent
  synthetic: false
  type: item.completed
